--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ numpy>=2.0.0             # pip install numpy
 scipy>=1.16.3            # pip install scipy
 scikit-learn>=1.7.2      # pip install scikit-learn
 statsmodels>=0.14.4      # pip install statsmodels
+yfinance>=0.2.66         # pip install yfinance
