--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ scipy>=1.16.3            # pip install scipy
 scikit-learn>=1.7.2      # pip install scikit-learn
 statsmodels>=0.14.4      # pip install statsmodels
 yfinance>=0.2.66         # pip install yfinance
+matplotlib>=3.10.7       # pip install matplotlib
+fredapi>=0.5.2           # pip install fredapi
